# hacking-by-the-sea-powerpoint-add-in

./: .gitignore  README.md  Slidessibility.slnx  pyproject.toml
Slidessibility.CLI/: Program.cs  Slidessibility.CLI.csproj
Slidessibility.Core/: Class1.cs  Slidessibility.Core.csproj
addin/: README.md  commands.html  manifest.xml
addin/taskpane/: taskpane.html  taskpane.js
examples/: Hackaton2026.pptx
examples/test/: Lesson.pptx
src/slidessibility/: __init__.py  app.py  checker.py  cli.py  pdf_checker.py  reports.py
src/slidessibility.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/slidessibility/templates/: index.html
tests/: test_checker.py
