[project]
name = "slidessibility"
version = "0.1.0"
description = "Accessibility checker for PowerPoint .pptx files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.23",
    "lxml>=4.9.0",  # For XML parsing if needed
    "colorama>=0.4.6",  # For colored CLI output
    "rich>=13.0.0",     # Rich text formatting for reports
]

[project.scripts]
slidessibility = "slidessibility.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["slidessibility*"]
[tool.setuptools]
package-dir = {"" = "src"}
